--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.395.0",
     "mongoose": "^8.4.1",
     "next": "14.2.4",
+    "next-images": "^1.8.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
